--- a/force-app/main/default/layouts/ASF_Case_Category_Config__c-Case Category Config Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ASF_Case_Category_Config__c-Case Category Config Layout.layout-meta.xml
@@ -173,6 +173,14 @@
                 <behavior>Edit</behavior>
                 <field>No_Owner_Change_on_Recat__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Fins_Non_Fins__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Current_TAT__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
