Asset Page Sync SIT

--- a/force-app/main/default/layouts/Asset-ABSLI Policy Page.layout-meta.xml
+++ b/force-app/main/default/layouts/Asset-ABSLI Policy Page.layout-meta.xml
@@ -17,19 +17,11 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>Application_Number__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>Loyalty_Service_Agent_Id__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Purpose_of_Insurance_1__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Purpose_of_Insurance_2__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Purpose_of_Insurance_3__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -45,6 +37,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>Owner_Client_Code__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>Rider_Premium_Amount_with_GST__c</field>
             </layoutItems>
             <layoutItems>
@@ -55,11 +51,19 @@
                 <behavior>Edit</behavior>
                 <field>Date_of_Conversion_to_IR__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Type__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>OwnerId</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Branch__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -132,6 +136,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>Loan_Amount__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>Loan_Interest_Rate__c</field>
             </layoutItems>
         </layoutColumns>
@@ -155,6 +163,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Guaranteed_Surrender_Value__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Advance_Premium__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -286,10 +298,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Method_Of_Payment__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Advance_Premium__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
