--- a/force-app/main/default/layouts/ABFL_Email_Validation_Configuration__mdt-ABFL Email Validation Configuration Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ABFL_Email_Validation_Configuration__mdt-ABFL Email Validation Configuration Layout.layout-meta.xml
@@ -11,12 +11,12 @@
                 <field>MasterLabel</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Email_Addresses_Allowed__c</field>
-            </layoutItems>
-            <layoutItems>
                 <behavior>Required</behavior>
                 <field>DeveloperName</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Email_Addresses_Allowed_Long__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -66,7 +66,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hBl000000CEs1</masterLabel>
+        <masterLabel>00hBi000000E8k5</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
