ABSLI Policy, Account Layout Fixes

--- a/force-app/main/default/layouts/PersonAccount-ABSLI Person Account Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/PersonAccount-ABSLI Person Account Layout.layout-meta.xml
@@ -25,8 +25,8 @@
         <label>Contact Information</label>
         <layoutColumns>
             <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Full_Name__pc</field>
+                <behavior>Required</behavior>
+                <field>Name</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
