ASF Redirect Changes for including Approved Requests

--- a/force-app/main/default/pages/ASF_redirectToCaseApprovalVF.page
+++ b/force-app/main/default/pages/ASF_redirectToCaseApprovalVF.page
@@ -3,7 +3,7 @@
     <script> 
     window.onload = function() { 
          
-        alert('loading...'); 
+        //alert('loading...'); 
         window.location.replace('https://www.google.com');
     } 
     </script>
