ABSLI New Task Layout

--- a/force-app/main/default/layouts/Case-ABSLI Feed Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-ABSLI Feed Layout.layout-meta.xml
@@ -525,7 +525,7 @@
             <sortOrder>3</sortOrder>
         </platformActionListItems>
         <platformActionListItems>
-            <actionName>NewTask</actionName>
+            <actionName>ABSLI_New_Task</actionName>
             <actionType>QuickAction</actionType>
             <sortOrder>4</sortOrder>
         </platformActionListItems>
