Policy Page layout

--- a/force-app/main/default/layouts/Asset-ABSLI Policy Page.layout-meta.xml
+++ b/force-app/main/default/layouts/Asset-ABSLI Policy Page.layout-meta.xml
@@ -17,6 +17,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>AccountId</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>Application_Number__c</field>
             </layoutItems>
             <layoutItems>
