ABSLI Acc Flexi Comm Log Related List Remov Buttons

--- a/force-app/main/default/layouts/PersonAccount-ABSLI Person Account Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/PersonAccount-ABSLI Person Account Layout.layout-meta.xml
@@ -317,6 +317,8 @@
         <sortOrder>Desc</sortOrder>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
+        <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>Phone__c</fields>
         <fields>Status__c</fields>
