--- a/force-app/main/default/layouts/ASF_Asset_Metadata__mdt-ASF Asset Metadata Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ASF_Asset_Metadata__mdt-ASF Asset Metadata Layout.layout-meta.xml
@@ -32,6 +32,10 @@
                 <behavior>Required</behavior>
                 <field>NamespacePrefix</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Line_Of_Business__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -70,7 +74,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hBi000000Cxaf</masterLabel>
+        <masterLabel>00hNy000005tcOZ</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
