--- a/force-app/main/default/layouts/Case-ABSLI Feed Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-ABSLI Feed Layout.layout-meta.xml
@@ -634,6 +634,7 @@
         <fields>NAME</fields>
         <fields>Status__c</fields>
         <fields>SMS_Msg_Body__c</fields>
+        <fields>CREATED_DATE</fields>
         <relatedList>ASF_Communication_Log__c.Case__c</relatedList>
     </relatedLists>
     <relatedLists>
@@ -650,7 +651,7 @@
     <showRunAssignmentRulesCheckbox>true</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>true</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hBl000000JRFp</masterLabel>
+        <masterLabel>00hBi000000McY5</masterLabel>
         <sizeX>3</sizeX>
         <sizeY>4</sizeY>
         <summaryLayoutItems>
