GST added in page layout

--- a/force-app/main/default/layouts/Doc_Charge__mdt-Doc Charge Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Doc_Charge__mdt-Doc Charge Layout.layout-meta.xml
@@ -60,6 +60,10 @@
                 <behavior>Edit</behavior>
                 <field>Payment_Required__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>GST__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -98,7 +102,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hBl000000CEX3</masterLabel>
+        <masterLabel>00hNy000005tcOk</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
