--- a/force-app/main/default/layouts/ABFL_Email_Validation_Configuration__mdt-ABFL Email Validation Configuration Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ABFL_Email_Validation_Configuration__mdt-ABFL Email Validation Configuration Layout.layout-meta.xml
@@ -66,7 +66,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hBl000000DZrE</masterLabel>
+        <masterLabel>00hBi000000E8k5</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
