ABSLI UAT fixes

--- a/force-app/main/default/layouts/Asset-ABSLI Policy Page.layout-meta.xml
+++ b/force-app/main/default/layouts/Asset-ABSLI Policy Page.layout-meta.xml
@@ -55,6 +55,10 @@
                 <behavior>Edit</behavior>
                 <field>Type__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Partner_Branch_Code__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -508,7 +512,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hBl000000KChl</masterLabel>
+        <masterLabel>00hBi000000M0RB</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
