--- a/force-app/main/default/layouts/ABCL_Integrations__mdt-ABCL Integrations Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ABCL_Integrations__mdt-ABCL Integrations Layout.layout-meta.xml
@@ -46,6 +46,10 @@
                 <behavior>Edit</behavior>
                 <field>Protocol__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>URL_Parameters__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
