--- a/force-app/main/default/lwc/abhi_ViewPolicyInformation_LWC/abhi_ViewPolicyInformation_LWC.css
+++ b/force-app/main/default/lwc/abhi_ViewPolicyInformation_LWC/abhi_ViewPolicyInformation_LWC.css
@@ -1,4 +1,6 @@
 .subHeading {
     font-size: small;
     font-weight: bold;
+    padding: var(--lwc-spacingXSmall);
+    background-color: var(--lwc-colorBackground);
   }
