--- a/force-app/main/default/layouts/ABCL_Integrations__mdt-ABCL Integrations Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ABCL_Integrations__mdt-ABCL Integrations Layout.layout-meta.xml
@@ -46,6 +46,10 @@
                 <behavior>Edit</behavior>
                 <field>Protocol__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>URL_Parameters__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -118,7 +122,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hNy000005tcOQ</masterLabel>
+        <masterLabel>00hBi000000Cxac</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
