--- a/force-app/main/default/layouts/ASF_Case_Category_Config__c-Case Category Config Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ASF_Case_Category_Config__c-Case Category Config Layout.layout-meta.xml
@@ -103,6 +103,10 @@
                 <behavior>Edit</behavior>
                 <field>Is_Prospect_Related__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>isStageSkip__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
