Update ASF_Case_Category_Config__c-Case Category Config Layout.layout-meta.xml

--- a/force-app/main/default/layouts/ASF_Case_Category_Config__c-Case Category Config Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ASF_Case_Category_Config__c-Case Category Config Layout.layout-meta.xml
@@ -107,6 +107,10 @@
                 <behavior>Edit</behavior>
                 <field>isStageSkip__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>isStageSkip__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -132,6 +136,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>is_FA_Mandatory__c</field>
+            </layoutItems>
+             <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Validation_method_during_creation__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -556,6 +564,10 @@
         <fields>Manual_Approval__c</fields>
         <fields>Default_Queue__c</fields>
         <relatedList>ASF_Case_Stage_Config__c.Case_Category_Config__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>ASF_Case_Email_Config__c.Case_Category_Config__c</relatedList>
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
